<resources>
    <string name="app_name">To Do List Compose</string>
    <string name="title_activity_main">My tasks</string>
    <string name="action_settings">Settings</string>

    <string name="title">Title</string>
    <string name="title_hint">Title</string>
    <string name="hint_description">Description</string>
    <string name="task_deleted_message">Task deleted</string>
    <string name="delete_task_message">Delete this task?</string>
    <string name="delete">Delete</string>
    <string name="menu_save">Save</string>
    <string name="fragment_label_your_tasks">Your tasks</string>
    <string name="fragment_label_add_edit_task">"Add/Edit task "</string>
    <string name="menu_all_tasks">All tasks</string>
    <string name="menu_completed_tasks">Completed tasks</string>
    <string name="menu_uncompleted_tasks">Uncompleted tasks</string>
    <string name="menu_filter_tasks">Filter tasks</string>
    <string name="title_all_tasks">All</string>
    <string name="title_completed_tasks">Completed</string>
    <string name="title_uncompleted_tasks">Uncompleted</string>
    <string name="menu_clear_tasks">Clear all</string>
    <string name="menu_clear_completed_tasks">Clear completed tasks</string>
    <string name="warning_delete_all_tasks">Are you sure want to delete all tasks?</string>
    <string name="warning_delete_completed_tasks">Are you sure want to delete completed tasks?</string>
    <string name="menu_search">Search</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="search_toolbar_title">\"%1$s\"</string>
    
    <string name="message_task_updated">The task has been updated</string>
    <string name="message_task_added">The task has been added</string>
</resources>