<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/ic_action_search"
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:title="@string/menu_search"/>

    <item
        android:id="@+id/ic_clear_all_tasks"
        android:title="@string/menu_clear_tasks"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/ic_clear_completed_tasks"
        android:title="@string/menu_clear_completed_tasks"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/ic_tasks_order"
        android:title="@string/menu_filter_tasks"
        android:icon="@drawable/ic_baseline_filter_list_24"
        app:showAsAction="always"
        >

        <menu>

            <group
                android:id="@+id/menu_group_task_order"
                android:checkableBehavior="single"
                >
                <item
                    android:id="@+id/ic_filter_all_tasks"
                    android:title="@string/menu_all_tasks"
                    android:checked="true"
                    app:showAsAction="never"
                    />

                <item
                    android:id="@+id/ic_filter_completed_tasks"
                    android:title="@string/menu_completed_tasks"
                    app:showAsAction="never"
                    />

                <item
                    android:id="@+id/ic_filter_uncompleted_tasks"
                    android:title="@string/menu_uncompleted_tasks"
                    app:showAsAction="never"
                    />
            </group>




        </menu>

    </item>

</menu>